Fix a couple spacing issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -82,7 +82,9 @@ table.timesheet {
 .timesheetPinned,
 #timesheet_grid,
 .contentFooter,
+.bodyIndent,
 #timesheet_header,
+#oa3_footer_spacer,
 #timesheet_header_lower {
   display: none;
 }
